2005-01-09  JP Rosevear  <jpr@novell.com>

	* itip-formatter.c (idle_open_cb): launch an evolution window
	pointing at the calendar date of the appointment
	(view_response_cb): use it

2005-01-09  JP Rosevear  <jpr@novell.com>	

	* itip-formatter.c (find_cal_opened_cb): only check for conflicts
	if the source has the conflict property
	(initialize_selection): select the "conflict" sources in the
	selector
	(source_selection_changed): update the source properties
	(itip_formatter_page_factory): include the source selector for
	selecting conflict checking calendars

2005-01-08  Harish Krishnaswamy  <kharish@novell.com>

	* itip-formatter.c: (send_item), (view_response_cb):
	update itip_send_comp calls with the new prototype.

2005-01-07  JP Rosevear  <jpr@novell.com>

	* itip-view.h: new protos

	* itip-view.c (set_tasklist_sender_text): task sender messages
	(set_calendar_sender_text): calendar sender messages
	(set_sender_text): select above as appropriate
	(itip_view_set_item_type): accessor
	(itip_view_get_item_type): ditto

	* itip-formatter.c (find_cal_opened_cb): messages for
	meetings/tasks/journals
	(send_item): ditto
	(format_itip_object): ditto
	(itip_formatter_page_factory): change page title

2005-01-07  JP Rosevear  <jpr@novell.com>	

	* itip-formatter.c (view_response_cb): ensure there is only one
	attendee in the RSVP even if the user is duplicated

2005-01-07  JP Rosevear  <jpr@novell.com>
	
	* itip-view.h: protos

	* itip-view.c (rsvp_toggled_cb): set comment sensitivity
	(itip_view_init): add comment entry
	(itip_view_set_rsvp): make comment entry sensitive when rsvp is
	(itip_view_set_rsvp_comment): accessor
	(itip_view_get_rsvp_comment): ditto
	
	* itip-formatter.c (find_cal_opened_cb): set error message if we
	can't find the item
	(view_response_cb): add comment if the user sets one

2005-01-07  JP Rosevear  <jpr@novell.com>
	
	* itip-view.h: add protos

	* itip-view.c (set_sender_text): update descriptions better